<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#EFF1F6"
    android:id="@+id/fragment_history"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="59dp"
...
        android:src="@drawable/ic_add"
        android:layout_margin="16dp"
        app:tint="@android:color/white"
        app:backgroundTint="@color/colorAccent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/return_for_today_button"
        style="@style/RobotoMonoText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/return_today"
...
