<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/title_layout"
    android:layout_width="match_parent"
    android:layout_height="59dp"
    android:background="@color/colorAccent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    app:layout_constraintBottom_toTopOf="@+id/summary_layout"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/title_text"
        style="@style/MontserratBigWhiteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/calendar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:src="@drawable/ic_calendar"
        android:background="@drawable/rectangular_button_click_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>