<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_screen_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFF1F6"
    tools:context="korablique.recipecalculator.ui.mainactivity.MainActivity"
    xmlns:custom="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/navigation"/>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="start"
            android:layout_alignParentBottom="true"
            app:menu="@menu/navigation_items"
            android:background="@drawable/navigation_item_background"
            app:itemBackground="@drawable/navigation_item_background"
            app:itemIconTint="@drawable/navigation_item_selector"
            app:itemTextColor="@drawable/navigation_item_selector" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/main_fullscreen_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</FrameLayout>
